# portello

./: CHANGELOG.md  Cargo.toml  LICENSE-THIRDPARTY.json  README.md
.github/workflows/: ci.yml
docs/: methods.md  user_guide.md
lib/rust-vc-utils/: CHANGELOG.md  Cargo.toml
lib/rust-vc-utils/src/: int_range.rs  lib.rs  util.rs
lib/rust-vc-utils/src/bam_utils/: basemod.rs  cigar.rs  mod.rs  split_read.rs  util.rs
lib/rust-vc-utils/src/bam_utils/cigar/: clip_alignment.rs  mod.rs  score_alignment.rs
lib/rust-vc-utils/src/bam_utils/cigar/shift_indels/: cigar_indel_shifter.rs  left_shift_indels.rs  mod.rs  right_shift_indels.rs
src/: cli.rs  contig_alignment_scanner.rs  left_shift_alignment.rs  liftover_read_alignment.rs  logger.rs  main.rs  read_alignment_scanner.rs  simplify_alignment_indels.rs  worker_thread_data.rs
src/contig_alignment_scanner/: contig_colinear_segment_joiner.rs  contig_repeated_match_trimmer.rs  mod.rs  non_targeted_segment_filter.rs
