[package]
name = "portello"
version = "0.5.0"
authors = ["Chris Saunders <csaunders@pacificbiosciences.com>"]
description = "Lifts read alignments from personal assembly to reference"
edition = "2024"
license-file="LICENSE.md"

[build-dependencies]
vergen-gitcl = "1"

[dependencies]
camino = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "suggestions"] }
exitcode = "1"
fern = "0.7"
hhmmss = "0.1"
log = "0.4"
num_cpus = "1"
rayon = "1"
rust-htslib = { version = "0.50", default-features = false, features = ["bzip2", "lzma"] }
rust-vc-utils = { path="lib/rust-vc-utils" }
simple-error = "0.3"
unwrap = "1"
